# sinan

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GLOSSARY.md
docs/adr/: 0001-deployment-and-access-model.md  0002-v1-scope-current-state-only.md  0003-v1-scope-and-data-lineage.md  0004-v1-data-sources.md  0005-credential-and-file-source-model.md  0006-knowledge-graph-data-model.md  0007-language-and-framework-pack-scope.md  0008-storage-architecture.md  0009-incremental-build.md  0010-reference-implementations-analysis.md  0011-mvp1-scope.md  0012-llm-integration-model.md  0013-deployment-and-ui-tech-stack.md  0014-ingestion-pipeline-and-query-layer.md  0015-quality-and-consistency-maintenance.md  0016-default-web-ui-views.md  0017-findings-and-health-inspection.md  0018-impact-analysis-and-complexity-hotspots.md  0019-path-explorer-and-engineering-priorities.md  0020-governance-and-consistency-system.md
docs/agent/: pr-review-protocol.md
src/sinan/: __init__.py
src/sinan/core/: __init__.py  interfaces.py  models.py  types.py
src/sinan/packs/: __init__.py
src/sinan/packs/framework/: __init__.py
src/sinan/packs/language/: __init__.py
src/sinan/packs/source/: __init__.py
tests/: __init__.py
tests/types/: __init__.py  test_architecture_gates.py  test_doc_consistency.py
