[project]
name = "sinan"
version = "0.1.0"
description = "LLM-powered multi-source project analysis — build cross-system knowledge graphs with evidence-backed understanding"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Runtime deps are added WITH the code that uses them. Only pydantic is declared
# now because it backs the single-source-of-truth type-shape models immediately.
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sinan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
markers = [
    "network: marks tests requiring live services (deselect with '-m \"not network\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
# High-signal rule set. RUF001/002/003 ignored because sinan has Chinese text
# in LLM prompts and docstrings (CJK unicode punctuation false positives).
select = ["E", "W", "F", "I", "UP", "B", "C4", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in defaults (common in Pydantic/FastAPI)
    "C901",   # complexity — pragmatic for now
    "RUF001", # CJK unicode punctuation
    "RUF002", # CJK unicode punctuation (docstrings)
    "RUF003", # CJK unicode punctuation (comments)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # re-exports
"tests/*" = ["S101"]       # asserts in tests

[tool.ruff.format]
quote-style = "double"

# Pragmatic high-signal subset — NOT globally strict. Tighten incrementally
# via module overrides as the codebase grows (see a-stock-assistant precedent).
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unreachable = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
disallow_any_generics = false
